2003-07-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-charset.c (g_mime_charset_canon_name): Updated to
	return canonical charset names for windows-cp125x charsets.

2003-06-19  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Added a section for links to language bindings starting
	with the Perl MIME::Fast modules.

	* docs/reference/question_index.sgml: Updated docs about the Perl
	bindings.

	* docs/tutorial/gmime-tut.sgml: Updated slightly.

2003-06-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (g_mime_parser_get_persist_stream): New
	function to get whether or not the parser will attempt to keep the
	content on disk when it constructs messages.
	(g_mime_parser_set_persist_stream): New function to set whether or
	not the above should be done.
	(parser_scan_mime_part_content): Only load content if persist and
	seekable are both TRUE.

	* gmime/gmime-stream-fs.c (g_mime_stream_fs_get_owner): Same idea.
	(g_mime_stream_fs_set_owner): And here.

	* gmime/gmime-stream-file.c (g_mime_stream_file_get_owner): New
	function, just like StreamMem.
	(g_mime_stream_file_set_owner): Same.

	* gmime/gmime-stream-mem.c (g_mime_stream_mem_set_owner): New
	function to set whether or not the memory stream should free the
	backend memory buffer when finalized.
	(g_mime_stream_mem_get_owner): New function to get the above
	attribute.

2003-06-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gtrie.c (g_trie_free): Free the fail_states array.

2003-05-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-common.c (g_mime_strcase_hash): Oops, fixed a bug.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify):
	Do not strip trailing whitespace when verifying, this should allow
	us to verify both rfc2015 and rfc3156 signed messages (as well as
	this being the correct way of doing it anyway).

2003-05-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-common.[c,h]: New source files implementing some