@@ -1,3 +1,10 @@
+2003-07-25  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-multipart.c (g_mime_multipart_foreach): Don't
+	descend recursively... make the user descend into sub-multiparts
+	him/herself. This makes more sense since the callback will be
+	called on the multipart too...
+
 2003-07-15  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/gmime-charset.c (g_mime_charset_canon_name): Updated to
